# LemonCuC

./: .gitignore  Cargo.toml  Dockerfile  Makefile  entrypoint.sh  i3.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
files/: 99-lemoncuc-fonts.conf  dunstrc  google-chrome  google-chrome-stable  google-chrome.desktop  i3-config  i3status.conf  properties.json  sshd_config
public/: keybindings.html
src/: main.rs  main.ts  style.css  tcpulse.rs
src/api/: dmenu.rs  i3msg.rs  mod.rs  properties.rs  scrot.rs  xdotool.rs
src/handlers/: audio.rs  cdp.rs  mod.rs  notify.rs  ssh.rs  vnc.rs
src/tcpulse/: mod.rs
src/vnc/: deflator.ts  des.ts  display.ts  encodings.ts  inflator.ts  rfb.ts  webaudio.ts  websock.ts
src/vnc/decoders/: copyrect.ts  hextile.ts  raw.ts  rre.ts  tight.ts  tightpng.ts
src/vnc/input/: domkeytable.ts  fixedkeys.ts  gesturehandler.ts  keyboard.ts  util.ts  vkeys.ts  xtscancodes.ts
src/vnc/util/: browser.ts  cursor.ts  element.ts  events.ts  eventtarget.ts  int.ts  strings.ts
src/websockify/: mod.rs
